Fix title spacing

--- a/css/index.css
+++ b/css/index.css
@@ -96,7 +96,7 @@ div.header {
 
     position: fixed;
     bottom: 0;
-    left: 17vw;
+    left: 16.25vw;
     
     z-index: 0;
 
